--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,5 +7,5 @@ ADD_SUBDIRECTORY(googletest)
 
 
 
-TARGET_LINK_LIBRARIES(test gtest)
-TARGET_COMPILE_DEFINITIONS(test PRIVATE gtest_disable_pthreads=ON)
+#TARGET_LINK_LIBRARIES(test gtest)
+#TARGET_COMPILE_DEFINITIONS(test PRIVATE gtest_disable_pthreads=ON)
