Add 'Run Unit Tests' to workflow

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,3 +32,6 @@ jobs:
       # Create Test Executables
       - name: Compile Test Executables
         run: make
+      # Run Test File
+      - name: Run Unit Tests
+        run: ./test
