--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,8 +4,15 @@ SET(CMAKE_CXX_STANDARD 11)
 
 ADD_SUBDIRECTORY(googletest)
 
-ADD_EXECUTABLE(test tests/unit_test.cpp)
+ADD_EXECUTABLE(test 
+tests/unit_test.cpp
 
+)
+ADD_EXECUTABLE(Game 
+src/main.cpp 
+src/Tile.cpp
+src/Map.cpp
+)
 
 TARGET_LINK_LIBRARIES(test gtest)
 TARGET_COMPILE_DEFINITIONS(test PRIVATE gtest_disable_pthreads=ON)
